--- a/CSS/index.css
+++ b/CSS/index.css
@@ -36,13 +36,46 @@
   font-size: 18px;
   text-decoration: none;
   color: #931d25;
+  animation: COLORFADE 0.8s ease;
 }
 .dropdown .dropdown-link:hover {
   color: #ffffff;
   background-color: #931d25;
 }
+@keyframes COLORFADE {
+  0% {
+    opacity: 0 ;
+    color: white;
+  }
+  100% {
+    opacity: 1 ;
+    color: #931d25;
+  }
+}
 .dropdown .dropdown-hidden {
   display: none;
+}
+.dropdown .dropdown-animate-on {
+  animation: ANIMON 0.4s ease;
+}
+@keyframes ANIMON {
+  0% {
+    height: 0px;
+  }
+  100% {
+    height: 160px;
+  }
+}
+.dropdown .dropdown-animate-off {
+  animation: ANIMOFF 0.4s ease;
+}
+@keyframes ANIMOFF {
+  0% {
+    height: 160px;
+  }
+  100% {
+    height: 0px;
+  }
 }
 .tabs {
   width: 100%;
@@ -65,6 +98,17 @@
 }
 .tabs .tabs-item-selected {
   display: block;
+  animation: FADETEXT 2s ease;
+}
+@keyframes FADETEXT {
+  0% {
+    opacity: 0 ;
+    color: white;
+  }
+  100% {
+    opacity: 1 ;
+    color: black;
+  }
 }
 .tabs .tabs-links {
   display: flex;
