--- a/components/Dropdown/Dropdown.less
+++ b/components/Dropdown/Dropdown.less
@@ -30,14 +30,41 @@
     font-size: 18px;
     text-decoration: none;
     color: @lambda-red;
+    animation: COLORFADE 0.8s ease;
     &:hover {
       color: @white;
       background-color: @lambda-red;
     }
   }
+
+  @keyframes COLORFADE{
+    0%{ opacity: 0 ;
+        color:white }
+    100%{ opacity: 1 ;
+          color:@lambda-red }
+  }
+
+
   .dropdown-hidden {
     display: none;
   }
+
+  .dropdown-animate-on{
+    animation: ANIMON 0.4s ease;
+  }
+  @keyframes ANIMON{
+    0% { height:0px }
+    100%{ height:160px }
+  }
+
+  .dropdown-animate-off{
+    animation: ANIMOFF 0.4s ease;
+  }
+  @keyframes ANIMOFF{
+    0% { height:160px }
+    100%{ height:0px }
+  }
+
 }
 
 
